add /scan endpoint
